java: reescribir demos duplicadas Paso 4 (módulos 8-15, 22 temas)
Cierra el backlog de repeatedDemo/practicable para todo el track Java
(59/59 temas practicables, 0 repeatedDemo). Módulos 6, 8 y 14 tenían
además un bug estructural de bloque genérico duplicado antes del
contenido real; se eliminó el bloque bogus y se reescribió Paso 4 de
cada tema con demos topic-específicas usando el código ya presente
en el archivo. Se agregaron párrafos de proyecto integrador y límites
donde faltaban. Regenerados docs/*.json y docs/*.md; validate.sh OK.